--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -1,8 +1,38 @@
 {
   "form": {
-    "actor_id": "Id",
-    "first_name": "First name",
-    "last_name": "Last name",
-    "last_update": "Last update"
+    "actor_id": "Actor ID",
+    "first_name": "First Name",
+    "last_name": "Last Name",
+    "last_update": "Last Update",
+    "category_id": "Category ID",
+    "name": "Name",
+    "city_id": "City ID",
+    "city": "City Name",
+    "country_id": "Country ID",
+    "country": "Country Name",
+    "customer_id": "Customer ID",
+    "store_id": "Store ID",
+    "email": "Email",
+    "address_id": "Address ID",
+    "active": "Active",
+    "create_date": "Create Date",
+    "inventory_id": "Inventory ID",
+    "film_id": "Film ID",
+    "language_id": "Language ID",
+    "payment_id": "Payment ID",
+    "staff_id": "Staff ID",
+    "rental_id": "Rental ID",
+    "amount": "Amount",
+    "payment_date": "Payment Date",
+    "username": "Alias",
+    "rental_date": "Fecha de renta",
+    "return_date": "Fecha de regreso",
+    "manager_staff_id": "Manager Staff ID",
+    "address" : "Address",
+    "address2": "Alternative Address",
+    "district": "District",
+    "postal_code": "Postal Code",
+    "phone": "Phone",
+    "location": "Location"
   }
 }
