feat: adding verify changes.

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -43,6 +43,10 @@
     "length": "Length",
     "replacement_cost": "Replacement Cost",
     "rating": "Rating",
-    "special_features": "Special Features"
+    "special_features": "Special Features",
+    "full_name": "Full Name",
+    "fullName": "Full Name",
+    "id": "ID",
+    "role_id": "Role ID"
   }
 }
